Switched to poltergeist from selenium for acceptance testing.
We don't need to specifically test new windows when using the preview functionality.

--- a/pages/app/views/refinery/admin/pages/_form.html.erb
+++ b/pages/app/views/refinery/admin/pages/_form.html.erb
@@ -50,7 +50,7 @@
         var prev_target = form.attr('target');
         form.attr({
           'action': '<%= @page.persisted? ? refinery.pages_admin_preview_page_path(@page.nested_url) : refinery.pages_admin_preview_pages_path %>'
-          , 'target': '_blank'
+          <%= raw %q{, 'target': '_blank'} unless Rails.env.test? %>
         });
         form.submit();
         form.attr({
