--- a/authentication/app/views/refinery/admin/users/_form.html.erb
+++ b/authentication/app/views/refinery/admin/users/_form.html.erb
@@ -30,7 +30,7 @@
     <ul id='plugins' class='checkboxes'>
       <% @available_plugins.each do |plugin| -%>
         <% if Refinery::Plugins.always_allowed.names.include?(plugin[:name]) or
-              (plugin[:name] == 'refinery_users' and @user.id == current_refinery_user.id) %>
+              (plugin[:name] == 'refinery_users' and @user.id == refinery_user.id) %>
           <%= hidden_field_tag 'user[plugins][]', plugin[:name],
                                :id => "plugins_#{plugin[:name]}" %>
         <% else %>
@@ -48,7 +48,7 @@
     </ul>
   </div>
 
-  <% if current_refinery_user.has_role?(:superuser) and Refinery::Authentication.superuser_can_assign_roles %>
+  <% if refinery_user.has_role?(:superuser) and Refinery::Authentication.superuser_can_assign_roles %>
     <div class='field role_access'>
       <span class='label_with_help'>
         <%= f.label :role_access, t('.role_access'), :class => "title_label" %>
@@ -71,7 +71,7 @@
 
   <%= render '/refinery/admin/form_actions', :f => f,
              :continue_editing => false,
-             :hide_delete => !current_refinery_user.can_delete?(@user),
+             :hide_delete => !refinery_user.can_delete?(@user),
              :delete_title => t('delete', :scope => 'refinery.admin.users'),
              :delete_confirmation => t('message', :scope => 'refinery.admin.delete', :title => @user.username) %>
 <% end %>
