--- a/authentication/app/views/refinery/admin/users/_user.html.erb
+++ b/authentication/app/views/refinery/admin/users/_user.html.erb
@@ -10,12 +10,12 @@
                 :title => t('.email_user') %>
     <%= link_to refinery_icon_tag('application_edit.png'),
                 refinery.edit_admin_user_path(user),
-                :title => t('edit', :scope => 'refinery.admin.users') if current_refinery_user.can_edit?(user) %>
+                :title => t('edit', :scope => 'refinery.admin.users') if refinery_user.can_edit?(user) %>
     <%= link_to refinery_icon_tag('delete.png'),
                 refinery.admin_user_path(user),
                 :class => "cancel confirm-delete",
                 :title => t('delete', :scope => 'refinery.admin.users'),
                 :method => :delete,
-                :confirm => t('message', :scope => 'refinery.admin.delete', :title => user.username) if current_refinery_user.can_delete?(user) %>
+                :confirm => t('message', :scope => 'refinery.admin.delete', :title => user.username) if refinery_user.can_delete?(user) %>
   </span>
 </li>
