We know the listTag and itemTag so we don't have to calculate it

--- a/core/app/assets/javascripts/refinery/interface.js.coffee.erb
+++ b/core/app/assets/javascripts/refinery/interface.js.coffee.erb
@@ -36,8 +36,8 @@
       scroll: 1
       buttonNextHTML: "<img src='<%= asset_path 'refinery/carousel-right.png' %>' alt='down' height='15' width='10' />"
       buttonPrevHTML: "<img src='<%= asset_path 'refinery/carousel-left.png' %>' alt='up' height='15' width='10' />"
-      listTag: $menu.get(0).tagName.toLowerCase()
-      itemTag: $menu.children(":first").get(0).tagName.toLowerCase()
+      listTag: 'nav'
+      itemTag: 'a'
 
     if $menu.outerWidth() < $("#page_container").outerWidth()
       $("#page_container:not('.login #page_container')").corner "5px tr"
