--- a/core/app/views/refinery/admin/_wysiwyg.html.erb
+++ b/core/app/views/refinery/admin/_wysiwyg.html.erb
@@ -1,7 +1,7 @@
-<div id='page-tabs' class='clearfix ui-tabs ui-widget ui-widget-content ui-corner-all'>
+<div id='page-tabs' class='clearfix refinery-ui-tabs refinery-ui-widget refinery-ui-widget-content refinery-ui-corner-all'>
   <ul id='page_parts'>
     <% fields.each_with_index do |part, part_index| %>
-      <li class='ui-state-default<%= ' ui-state-active' if part_index == 0 %>'>
+      <li class='refinery-ui-state-default<%= ' ui-state-active' if part_index == 0 %>'>
         <%= link_to t("#{part}", :scope => "activerecord.attributes.refinery/#{object}", :default => part.to_s.titleize), "##{part}" %>
       </li>
     <% end %>
