--- a/pages/app/views/refinery/admin/pages/_form_page_parts.html.erb
+++ b/pages/app/views/refinery/admin/pages/_form_page_parts.html.erb
@@ -23,15 +23,15 @@
     </li>
   </ul>
 <% end %>
-<div id='page-tabs' class='clearfix ui-tabs ui-widget ui-widget-content ui-corner-all'>
+<div id='page-tabs' class='clearfix refinery-ui-tabs refinery-ui-widget refinery-ui-widget-content refinery-ui-corner-all'>
   <ul id='page_parts'>
     <% @page.parts.each_with_index do |part, part_index| %>
-      <li class='ui-state-default<%= ' ui-state-active' if part_index == 0 %>' data-index='<%= part_index %>'>
+      <li class='refinery-ui-state-default<%= ' ui-state-active' if part_index == 0 %>' data-index='<%= part_index %>'>
         <%= link_to part.title, "##{@page.persisted? ? part.to_param : "page_part_new_#{part_index}"}" %>
       </li>
     <% end %>
     <% ::Refinery::Pages.tabs_for_template(@page.view_template).each_with_index do |tab, tab_index| %>
-      <li class='ui-state-default' id="custom_<%= tab.name %>_tab">
+      <li class='refinery-ui-state-default' id="custom_<%= tab.name %>_tab">
         <%= link_to tab.name.titleize, "#custom_tab_#{tab_index}" %>
       </li>
     <% end %>
